--- a/regist.html
+++ b/regist.html
@@ -15,23 +15,33 @@
 
 			<div class="modal-content">
 				<div class="col-12 tittle-login">
-					<h2>Sign In</h2>
+					<h2>Register</h2>
 				</div>
 
 				<div class="col-12 form-input">
 					<form action="#" method="post">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Nama" >
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Tanggal Lahir" >
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Alamat" >
+						</div>
 						<div class="form-group">
 							<input type="email" class="form-control" placeholder="Email Address" >
 						</div>
 						<div class="form-group">
 							<input type="password" class="form-control" placeholder="Password" >
 						</div>
-						<button type="submit" class="btn btn-success">Sign In</button>
+						<button type="submit" class="btn btn-success">Save</button>
 					</form>
 				</div>
-<br>
+
 				<div class="col-12 tittle-signup">
-				 <a href="regist.html"> Belum Punya Akun ? Daftar Disini!</a>
+				 <a href="index.html"> Sudah Punya Akun?</a>
+				 <a href="index.html"> Sign In </a>
 				</div>
 
 			</div>
